api_versioned_docs/version-12.0.0/avalonia/controls/hierarchicaltreedatagridsource-1.mdx
---
title: 'HierarchicalTreeDataGridSource<TModel>'
hide_title: true
slug: '/avalonia/controls/hierarchicaltreedatagridsource-1'
uid: 'Avalonia.Controls.HierarchicalTreeDataGridSource`1'
commentId: 'T:Avalonia.Controls.HierarchicalTreeDataGridSource`1'
docset: 'avalonia-docs'
packageId: 'Avalonia.Controls.TreeDataGrid'
assembly: 'Avalonia.Controls.TreeDataGrid'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls'
tfms:
  - 'net8.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">HierarchicalTreeDataGridSource&lt;TModel&gt; Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls.TreeDataGrid</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.Controls.TreeDataGrid</code>
</div>
</div>

<div className="apiref-page__lead">

A data source for a [Avalonia.Controls.TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid) which displays a hierarchial tree where each
row may have multiple columns.

</div>

<div className="apiref-page__signature">

```csharp
public class HierarchicalTreeDataGridSource<TModel>
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> TreeDataGridSource&lt;&gt; <span className="apiref-page__relation-separator">-&gt;</span> HierarchicalTreeDataGridSource&lt;TModel&gt;
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Implements:</span> IDisposable, bk&lt;&gt;
</div>
</div>

## Constructors

| Name | Description |
| --- | --- |
| [HierarchicalTreeDataGridSource&lt;TModel&gt; (2 overloads)](#uid-605da012ea) | No summary available. |

<span id="uid-605da012ea"></span>

### HierarchicalTreeDataGridSource&lt;TModel&gt; overloads

<section className="apiref-page__member-entry">

<span id="uid-6d872cdcb1"></span>

#### HierarchicalTreeDataGridSource&lt;TModel&gt; Constructor

```csharp
public HierarchicalTreeDataGridSource<TModel>(System.Collections.Generic.IEnumerable<TModel> items)
```

##### Parameters

`items` System.Collections.Generic.IEnumerable&lt;TModel&gt;


</section>

<section className="apiref-page__member-entry">

<span id="uid-910c95098a"></span>

#### HierarchicalTreeDataGridSource&lt;TModel&gt; Constructor

Initializes a new instance of the [Avalonia.Controls.HierarchicalTreeDataGridSource&lt;T&gt;](xref:Avalonia.Controls.HierarchicalTreeDataGridSource%601)
class with a single root item.

```csharp
public HierarchicalTreeDataGridSource<TModel>(TModel item)
```

##### Parameters

`item` TModel

The root item to display.


</section>

## Methods

| Name | Description |
| --- | --- |
| [ClearSort](#uid-8e07659323) | No summary available. |
| [Collapse](#uid-5e67fcdd5f) | Collapses the row at the specified index. |
| [CollapseAll](#uid-0ebcf7f1f5) | Collapses all rows. |
| [Dispose](#uid-1824a7e978) | No summary available. |
| [Expand](#uid-c660c5533a) | Expands the row at the specified index. |
| [ExpandAll](#uid-d9c5dfe234) | Expands all rows. |
| [ExpandCollapseRecursive (2 overloads)](#uid-ad2985dddf) | No summary available. |
| [Filter](#uid-10b946258c) | No summary available. |
| [RefreshFilter](#uid-0d25155d18) | Refreshes the current filter applied to the collection. |
| [Sort](#uid-8ba934b7f9) | No summary available. |
| [SortBy](#uid-3c6dcc6d20) | No summary available. |
| [TryGetModelAt](#uid-27167f5a71) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-8e07659323"></span>

### ClearSort Method

```csharp
public void ClearSort(Avalonia.Controls.TreeDataGridColumn column)
```

#### Parameters

`column` [Avalonia.Controls.TreeDataGridColumn](xref:Avalonia.Controls.TreeDataGridColumn)


</section>

<section className="apiref-page__member-entry">

<span id="uid-5e67fcdd5f"></span>

### Collapse Method

Collapses the row at the specified index.

```csharp
public void Collapse(Avalonia.Controls.IndexPath index)
```

#### Parameters

`index` [Avalonia.Controls.IndexPath](xref:Avalonia.Controls.IndexPath)

The index path of the row to collapse.


</section>

<section className="apiref-page__member-entry">

<span id="uid-0ebcf7f1f5"></span>

### CollapseAll Method

Collapses all rows.

```csharp
public void CollapseAll()
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-1824a7e978"></span>

### Dispose Method

```csharp
public void Dispose()
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-c660c5533a"></span>

### Expand Method

Expands the row at the specified index.

```csharp
public void Expand(Avalonia.Controls.IndexPath index)
```

#### Parameters

`index` [Avalonia.Controls.IndexPath](xref:Avalonia.Controls.IndexPath)

The index path of the row to expand.


</section>

<section className="apiref-page__member-entry">

<span id="uid-d9c5dfe234"></span>

### ExpandAll Method

Expands all rows.

```csharp
public void ExpandAll()
```

</section>

<span id="uid-ad2985dddf"></span>

### ExpandCollapseRecursive overloads

<section className="apiref-page__member-entry">

<span id="uid-4a0571abc4"></span>

#### ExpandCollapseRecursive Method

```csharp
public void ExpandCollapseRecursive(Avalonia.Controls.Models.ITreeDataGridRowModel row, Func<TModel, bool> predicate)
```

##### Parameters

`row` [Avalonia.Controls.Models.ITreeDataGridRowModel](xref:Avalonia.Controls.Models.ITreeDataGridRowModel)


`predicate` Func&lt;TModel, bool&gt;


</section>

<section className="apiref-page__member-entry">

<span id="uid-98748127e6"></span>

#### ExpandCollapseRecursive Method

```csharp
public void ExpandCollapseRecursive(Func<TModel, bool> predicate)
```

##### Parameters

`predicate` Func&lt;TModel, bool&gt;


</section>

<section className="apiref-page__member-entry">

<span id="uid-10b946258c"></span>

### Filter Method

```csharp
public void Filter(Func<TModel, bool> filter)
```

#### Parameters

`filter` Func&lt;TModel, bool&gt;


</section>

<section className="apiref-page__member-entry">

<span id="uid-0d25155d18"></span>

### RefreshFilter Method

Refreshes the current filter applied to the collection.

```csharp
public void RefreshFilter()
```

#### Remarks

Call this method if the filter predicate depends on external state which has changed,
to re-apply the filter to the collection.

</section>

<section className="apiref-page__member-entry">

<span id="uid-8ba934b7f9"></span>

### Sort Method

```csharp
public void Sort(Comparison<TModel> comparison)
```

#### Parameters

`comparison` Comparison&lt;TModel&gt;


</section>

<section className="apiref-page__member-entry">

<span id="uid-3c6dcc6d20"></span>

### SortBy Method

```csharp
public bool SortBy(Avalonia.Controls.TreeDataGridColumn column, System.ComponentModel.ListSortDirection direction)
```

#### Parameters

`column` [Avalonia.Controls.TreeDataGridColumn](xref:Avalonia.Controls.TreeDataGridColumn)


`direction` System.ComponentModel.ListSortDirection


#### Returns

bool


</section>

<section className="apiref-page__member-entry">

<span id="uid-27167f5a71"></span>

### TryGetModelAt Method

```csharp
public bool TryGetModelAt(Avalonia.Controls.IndexPath index, TModel& result)
```

#### Parameters

`index` [Avalonia.Controls.IndexPath](xref:Avalonia.Controls.IndexPath)


`result` TModel&amp;


#### Returns

bool


</section>

## Properties

| Name | Description |
| --- | --- |
| [Columns](#uid-05481cc77c) | Gets the columns to be displayed. |
| [IsFiltered](#uid-3a33721782) | No summary available. |
| [IsHierarchical](#uid-6d39e40f08) | No summary available. |
| [IsSorted](#uid-9cef2b77c9) | No summary available. |
| [Items](#uid-04df0ed43b) | No summary available. |
| [Rows](#uid-e93421ca5e) | No summary available. |
| [Selection](#uid-cab824017d) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-05481cc77c"></span>

### Columns Property

Gets the columns to be displayed.

```csharp
public Avalonia.Controls.TreeDataGridColumns Columns { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-3a33721782"></span>

### IsFiltered Property

```csharp
public bool IsFiltered { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-6d39e40f08"></span>

### IsHierarchical Property

```csharp
public bool IsHierarchical { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-9cef2b77c9"></span>

### IsSorted Property

```csharp
public bool IsSorted { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-04df0ed43b"></span>

### Items Property

```csharp
public System.Collections.Generic.IEnumerable<TModel> Items { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-e93421ca5e"></span>

### Rows Property

```csharp
public Avalonia.Controls.TreeDataGridRows Rows { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-cab824017d"></span>

### Selection Property

```csharp
public Avalonia.Controls.Selection.TreeDataGridSelectionModel Selection { get; set; }
```

</section>

## Events

| Name | Description |
| --- | --- |
| [RowCollapsed](#uid-5f100222ee) | Occurs when a hierarchical row is collapsed. |
| [RowCollapsing](#uid-8606e70882) | Occurs when a hierarchical row is about to collapse. |
| [RowExpanded](#uid-1afd7a5abf) | Occurs when a row in the hierarchical data structure is expanded. |
| [RowExpanding](#uid-b2c0356a5c) | Occurs when a row in the hierarchical data structure is about to expand. |

<section className="apiref-page__member-entry">

<span id="uid-5f100222ee"></span>

### RowCollapsed Event

Occurs when a hierarchical row is collapsed.

```csharp
public event EventHandler<Avalonia.Controls.Models.TreeDataGridRowModelEventArgs> RowCollapsed
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-8606e70882"></span>

### RowCollapsing Event

Occurs when a hierarchical row is about to collapse.

```csharp
public event EventHandler<Avalonia.Controls.Models.TreeDataGridRowModelEventArgs> RowCollapsing
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-1afd7a5abf"></span>

### RowExpanded Event

Occurs when a row in the hierarchical data structure is expanded.

```csharp
public event EventHandler<Avalonia.Controls.Models.TreeDataGridRowModelEventArgs> RowExpanded
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-b2c0356a5c"></span>

### RowExpanding Event

Occurs when a row in the hierarchical data structure is about to expand.

```csharp
public event EventHandler<Avalonia.Controls.Models.TreeDataGridRowModelEventArgs> RowExpanding
```

</section>

</ApiRefPage>

